# Colosseum

./: .gitignore  CMakeLists.txt  LICENSE  README.md
colosseum/: CMakelists.txt  colosseum-cli.cc
colosseum/cli/: main.cpp
colosseum/cli/include/: application.h  parser.h
colosseum/cli/src/: application.cpp  parser.cpp
colosseum/gui/: main.cpp
colosseum/lib/include/: engine.h  engine_manager.h  engine_option.h  match.h  timecontrol.h  tournament.h
colosseum/lib/src/: engine.cpp  engine_manager.cpp  engine_option.cpp  match.cpp  timecontrol.cpp  tournament.cpp
colosseum/src/cli/: parser.cpp  parser.h
src/: CMakelists.txt  colosseum-app.cc  colosseum-cli.cc
src/app/: app.cpp  app.h
src/cli/: cli.cpp  cli.h  cli_config.cpp  cli_config.h  cli_parser.cpp  cli_parser.h
src/cli/option/: cli_option.h  cli_option_each.h  cli_option_engine.h
src/lib/engine/: engine_config.h
src/utility/: exception.h  expection.cpp
